[package]
name = "block-alarm"
version = "0.1.0"
authors = ["Donovan Preston <donovanpreston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
signal-hook = "0.1.16"
tokio = { version = "0.2", path = "../tokio/tokio", features = ["rt-core", "time", "macros"] }
